manifests/monitoring/ddnetpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kronos-to-datadog
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app: datadog
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: kronos-app
    toPorts:
    - ports:
      - port: "4318"
        protocol: TCP
